iptables_conf
# Generated by iptables-save v1.4.21 on Mon May  1 14:18:03 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "[IPTABLES INPUT]:"
-A INPUT -p udp --dport 123 -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT
-A INPUT -s 52.197.229.83/32 -j ACCEPT
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "[IPTABLES FORWARD]:"
-A OUTPUT -p udp --sport 123 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A OUTPUT -d 52.197.229.83/32 -j ACCEPT
COMMIT
# Completed on Mon May  1 14:18:03 2017
